// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders no class if not the active Thumbnail 1`] = `
<button
  className=""
  onClick={[Function]}
>
  <div
    className="undefined undefined"
  >
    <img
      alt="test-thumbnail"
      className="undefined undefined"
      loading="eager"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
      style={
        Object {
          "height": "auto",
          "width": "100%",
        }
      }
    />
    <img
      alt="test-thumbnail"
      className="undefined undefined"
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      sizes=""
      src="/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&fit=cover"
      srcSet="/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
      style={
        Object {
          "height": "auto",
          "width": "100%",
        }
      }
    />
  </div>
</button>
`;

exports[`renders the Thumbnail component correctly 1`] = `
<button
  className="active"
  onClick={[Function]}
>
  <div
    className="undefined undefined"
  >
    <img
      alt="test-thumbnail"
      className="undefined undefined"
      loading="eager"
      src="data:image/svg+xml;base64,PHN2ZyB4bWxucz0naHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmcnIHdpZHRoPSc0JyBoZWlnaHQ9JzUnPjxyZWN0IHdpZHRoPSc0JyBoZWlnaHQ9JzUnIHN0eWxlPSdmaWxsOiBub25lJyAvPjwvc3ZnPg=="
      style={
        Object {
          "height": "auto",
          "width": "100%",
        }
      }
    />
    <img
      alt="test-thumbnail"
      className="undefined undefined"
      loading="lazy"
      onError={[Function]}
      onLoad={[Function]}
      sizes=""
      src="/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&fit=cover"
      srcSet="/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=40&height=50&fit=cover 40w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=80&height=100&fit=cover 80w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=160&height=200&fit=cover 160w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=320&height=400&fit=cover 320w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=640&height=800&fit=cover 640w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=960&height=1200&fit=cover 960w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=1280&height=1600&fit=cover 1280w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=1600&height=2000&fit=cover 1600w,
/media/catalog/product/thumbnail.png?auto=webp&format=pjpg&width=2560&height=3200&fit=cover 2560w"
      style={
        Object {
          "height": "auto",
          "width": "100%",
        }
      }
    />
  </div>
</button>
`;

exports[`renders transparent placeholder when no file name is provided 1`] = `null`;
